# ztfsensors

./: README.md  pyproject.toml  setup.cfg  setup.py
sandbox/: reco_fits.py  skwmodel.py
tests/: .gitignore  bench_pocket.py  test_1d_pocket_corr.py  test_2d_pocket_corr.py  test_correct_pixels.py  test_pocket.py  ztfimg_corr_example.py  ztfimg_modelcorrection_example.ipynb
ztfsensors/: __init__.py  _pocket.cpp  correct.py  pocket.py  skwcorr.py  test.py
ztfsensors/data/: correction_access.py  pocket_corrections.yaml
ztfsensors/sims/: __init__.py
